src/app/dashboard/manage-clinic/manage-clinic.component.css
/* ... */
  p.open_2 {
    /* color: #fff; */
    font-size: 8px;
    font-family: 'Roboto', sans-serif;
    line-height: 22px;
    margin: 0 14px 0 0px;
}
  .slider1.round1 {
    border-radius: 34px;
  }
  
  .slider1:before {
    border-radius: 50%;
  }
/* ****Notifications icons2**** */
/* *****Dropdown button ****** */
.webdropdown {
    position: relative;
    display: inline-block;
    float: right;
    top: 21px;
}
.webdropdown-content{
    display: block;
    margin-left: -55px;
    position: absolute;
    background: #f7f7f7;
    z-index: 999999;
    opacity: initial;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    height: auto;
}
svg#edit_schedule {
    fill: #000000;
    height: 14px;
    width: 14px;
}
span.triangle {
    border-left: 9px solid transparent;
    border-right: 9px solid transparent;
    border-bottom: 10px solid #f7f7f7;;
    margin-top: 2px;
    position: absolute;
    top: -10px;
    right: -10px;
    margin-right: 14px;
}
.webdropdown-content a {
    color:#000000;
    padding: 8px 0 8px 9px;
    text-decoration: none;
    display: block;
}
ul.list-inline.edditsp li:hover {
    color: #3ad87b!important;
}
ul.list-inline.edditsp.bor_der {
    margin-bottom: -2px;
}
ul.list-inline.edditsp.edditsp_up {
    margin-top: -2px;
}
li:hover svg#edit_schedule {
    fill: #3ad87b!important;
}
hr.bor_derhr {
    margin: 0;
}
ul.list-inline.edditsp {
    margin-bottom: 0;
}
.webdropdown:hover .webdropdown-content {
    display: block;
}
button.eddtn {
    background: transparent;
    border: none;
}
.webdropdown:hover .dropbtn {
    background-color: #3e8e41;
}
/* *****Dropdown button ****** */
/* ********Responsive******** */
@media only screen and (min-width: 320px) and (max-width:767px){
    div#left_side{
        padding-left: 15px;
    }
section.schedule{
    overflow: auto;
}
.resleft{
    padding-left: 40px;
}
.simo_txt {
    text-align: center;
}
ul#visitor-allign{
    text-align: center;
}
.webdropdown {
    float: right;
}
div#padding_left {
    padding-right: 14px!important;
    padding-left: 14px!important;
}
.webdropdown-content{
    margin-top:3em;
    width: auto;
}
span.triangle {
    top: -12px;
    right: 2px;
}
li.time:after {
    top: 14px;
    right: 40%;
}
li.time:before {
    top: 14px;
    left: 40%;
}
/* div#padding_left{
    padding-left: 15px;
} */
.card_text {
    padding-bottom: 16px;
}
p.time_pick{
    margin-top: 1em;
    margin-left: 0;
}
div#top_p {
    margin-top: -1em;
}
.time_pickinput {
    margin-left: 1em;
}
.sp_to {
    margin-top: 2em;
    padding-right: 1em;
}
.div_btn {
    text-align: center;
    margin-top: 1em;
}
button.btn_circ{
    float: right;
}
svg#dot{
    height: 30px;
    width: 22px;
    float: right;
}
}
@media only screen and (min-width: 767px) and (max-width:1024px) and (orientation:portrait){
    section.schedule{
        overflow: auto;
    }
    .simo_txt {
        text-align: center;
    }
    ul#visitor-allign{
        text-align: center;
    }
    li.time:after {
        top: 14px;
        right: 40%;
    }
    li.time:before {
        top: 14px;
        left: 40%;
    }
    div#padding_left{
        padding-left: 15px;
    }
    .card_text {
        padding-bottom: 16px;
    }
    p.time_pick{
        margin-top: 1em;
        margin-left: 0;
    }
    div#top_p {
        margin-top: -1em;
    }
    .time_pickinput {
        margin-left: 1em;
    }
    .sp_to {
        margin-top: 2em;
        padding-right: 1em;
    }
    .div_btn {
        text-align: center;
        margin-top: 1em;
    }
}
@media only screen and (min-width: 767px) and (max-width:1024px) and (orientation:landscape){
    svg#dot {
        width: 34px;
    }
    div#padding_left {
        padding-left:0;
        padding-right: 0;
    }
}
@media only screen and (min-width: 1024px) and (max-width:1366px) and (orientation:portrait){
    svg#dot {
        width: 34px;
    }
    div#padding_left {
        padding-left:0;
        padding-right: 0;
    }
}
::-webkit-scrollbar { 
  display: none;
}
.scroll {
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    height: 73vh;
}
.card.clinic {
    border-radius: 10px;
    box-shadow: 0 0px 0px 0 rgba(0,0,0,0.14), 0 1px 2px 0 rgba(0,0,0,0.12), 0 3px 0px -4px rgba(0,0,0,0.2);
}

 /* ********Responsive******** */
 .nopadding0col1{
    padding: 0;
}
.nopadding0col{
    padding: 0;
}
.vertical-alignment-helper {
    display:table;
    height: 100%;
    width: 100%;
}
.vertical-align-center {
    /* To center vertically */
    display: table-cell;
    vertical-align: middle;
}
.modal-content {
    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
    width:inherit;
    height:inherit;
    /* To center horizontally */
    margin: 0 auto;
}
.modal {
    display: none;
    position: fixed;
    left: 0;
    right: 0;
    background-color: transparent;
    padding: 0;
    max-height: 70%;
    width: 55%;
    margin: auto;
    overflow-y: auto;
    border-radius: 5px;
    will-change: top, opacity;
    box-shadow: none;
}
div#mydelModal .modal-header {
    border: none;
    padding:0;
    /* background: linear-gradient(to right,rgba(86, 127, 251, 1), rgba(182, 108, 245, 1)); */
    border-radius: 5px 5px 0 0;
    font-family: 'Lato', sans-serif;
    color: #fff;
}
button.dele_te {
    outline: none;
    border: 1px solid#e02748;
    font-family: 'Lato', sans-serif;
    font-weight: 500;
    cursor: pointer;
    border-radius: 50px;
    color: #e02748;
    background: transparent;
    height: 30px;
    width: 69px;
}
button.btn_delde {
    margin: 10em 0;
    height: 42px;
    width: 120px;
    background: #4f5ae8;
    border: none;
    color: #fff;
}
button.cance_l {
    border: 1px solid rgb(123, 122, 122);
    cursor: pointer;
    color: #676464;
    font-family: 'Lato', sans-serif;
    height: 30px;
    font-weight: 500;
    background: transparent;
    margin-right: 14px;
    width: 69px;
    border-radius: 50px;
}
/* ... */

